M: test for mod bugs of md \

--- a/Markdown/14_正交向量和子空间.md
+++ b/Markdown/14_正交向量和子空间.md
@@ -39,10 +39,10 @@ row\ 2 & of & A \\
 row\ m & of & A \\
 \end{bmatrix},
 X = \begin{bmatrix}
-x_1 \\
-x_2 \\
-\vdots \\
-x_n \\
+x_1 \\\\
+x_2 \\\\
+\vdots \\\\
+x_n \\\\
 \end{bmatrix},
 $$
 
