A: Lec32_第32讲 基变换和图像压缩 v0.1 md

--- a/Markdown/32_基变换和图像压缩.md
+++ b/Markdown/32_基变换和图像压缩.md
@@ -2,13 +2,13 @@
 
 ## 1. 图像
 
-![lena](./img/lena.png)
+![lena](./img/lena.jpg)
 
 一张图片是由一个个像素点组成的。
 假设上面这个图片是个没有压缩过的彩色位图。（但很明显不是）
 每一个像素点就都是由 32 bits 组成的，其中 RGB 24bits，alpha 通道 8 bits 以表示图像透明度信息。
 
-![lenag](./img/lenag.png)
+![lenag](./img/lenag.jpg)
 
 对于一个灰度图（假设它的确是灰度图），每一个像素点就只有 8 bits 组成。假设图片为 $250 \times 250$ 大小，那么用 500000 bits 可以在不压缩情况下表示这么小的一张图片。
 
